# kafka-course

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
consumer/: Dockerfile  batch_consumer.py  main.py  single_consumer.py
producer/: Dockerfile  main.py  producer.py
topics/: create_topic.sh  describe_topics.sh
