[tool.poetry]
name = "kafka-course"
version = "0.1.0"
description = ""
authors = ["Rostislav <rostislav.gezalyants@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
confluent-kafka = "^2.9.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"